--- a/cuisine.html
+++ b/cuisine.html
@@ -8,7 +8,7 @@
   <body>
     <h3>
       <i><b>Cuisines of New York</b></i>
-      <i><b>Cuisines of New York</b></i>
     </h3>
+    <h2>kasturi</h2>
   </body>
 </html>
