All the files have been modified and the project is completed

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
+    <a class="Link" href="index.html">Home</a>
+    <a class="Link" href="aboutUs.html">About Us</a>
+    <a class="Link" href="contactUs.html">Contact Us</a>
+    <a class="Link" href="climate.html">Climate</a>
+    <a class="Link" href="cuisine.html">Cuisines</a>
     <h4>
       <u
         ><i><b>About Us</b></i></u
