--- a/contactUs.html
+++ b/contactUs.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css\style.css" />
   </head>
   <body>
+    <a class="Link" href="index.html">Home</a>
+    <a class="Link" href="aboutUs.html">About Us</a>
+    <a class="Link" href="contactUs.html">Contact Us</a>
+    <a class="Link" href="climate.html">Climate</a>
+    <a class="Link" href="cuisine.html">Cuisines</a>
     <h3>
       <b><i>Contact Us</i></b>
     </h3>
